--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/public/styles/main.css">
-        <title>Title</title>
-    </head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="stylesheet" href="/public/styles/main.css">
+      <title>Blake Latch Portfolio</title>
+  </head>
+        
     <body>
+    	<div class="headerBar">
+			<a href="index.html">Home</a>
+			<a href="about.html">About</a>
+			<a href="work.html">Work</a>
+			<a id="contactsHeader" href="contact.html">Contact</a>
+		</div>
+
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<div class="mainBody">
+		    <div class="homeCenter">
+
+                <br>
+                <br>
+                <br>
+
+                <img id="homeProf" src="images/profile.png" alt="Profile Photo">
+
+                <br>
+                <br>
+
+                <div id="glassBackground">
+                    <p id="glassTextName">Hey, I'm Blake!</p>
+                    <p id="glassTextJob">I am a Full-Stack Web Developer!</p>
+                </div>
+
+                <br>
+                <br>
 
 
+                <svg xmlns="http://www.w3.org/2000/svg" width="500" height="3.0" viewbox="503.4999768333712 449.5000147761509 284.0 3.0">
+                <g>
+                    <defs>
+                    <path id="s-Path_1-d1224" d="M505.0 451.0 L785.9999999999998 451.0 "></path>
+                    </defs>
+                    <g>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-Path_1-d1224" fill="none" stroke-width="5" stroke="#298e57" stroke-linecap="square" filter="none"></use>
+                    </g>
+                </g>
+                </svg>
 
+                <br>
+                <br>
 
-
-
-
-
-        <script src="/public/bundle.js"></script>
+            </div>
+		</div>
     </body>
 </html>
