--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,29 @@
     </head>
     <body>
 
-        <nav class="headerBar">
-            <a href="index.html">Home</a>
-			<a href="about.html">About</a>
-			<a href="work.html">Work</a>
-			<a href="contact.html">Contact</a>
-        </nav>
+        <header>
+            <nav class="headerBar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-        <div class="mainBody">
-            <section class="centerObject">
+        <section id="centerObject">
 
-                <br>
-                <br>
-                <br>
+            <img id="picProfile" src="../src/images/profile.png" alt="Profile Photo">
 
-                <img id="picProfile" src="../src/images/profile.png" alt="Profile Photo">
+            <h1>Blake Latch</h1>
 
-                <br>
-                <br>
+            <div id="glassBackground">
+                <p class="glassText">Hello, my name is Blake.</p>
+                <p class="glassText">I am a Full-Stack Web Developer who has experience across a number of different languages and technologies.</p>
+                <p class="glassText" id="glassTextBottom">Check out my porfolio to see some of the projects I have been working on.</p>
+            </div>
+        </section>
 
-                <div id="glassBackground">
-                    <p class="glassText">Hello, my name is Blake.</p>
-                    <p class="glassText">I am a Full-Stack Web Developer who has experience across a number of different languages and technologies.</p>
-                    <p class="glassText" id="glassTextBottom">Check out my porfolio to see some of the projects I have been working on.</p>
-                </div>
-
-                <br>
-                <br>
-            </section>
-        </div>
     </body>
 </html>
