--- a/public/contact.html
+++ b/public/contact.html
@@ -32,6 +32,10 @@
         </nav>
     </header>
 
+    <section>
+        <h3>Contact me at:</h3>
+        <p>Email: blakelatch01@gmail.com</p>
+    </section>
 
     <footer id="containerFooter">
 
