--- a/public/work.html
+++ b/public/work.html
@@ -32,6 +32,11 @@
         </nav>
     </header>
 
+    <section>
+            <h3>Projects: </h3>
+
+            <!-- put grid here for projects -->
+    </section>
 
     <footer id="containerFooter">
 
