--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,10 @@
             <nav class="headerBar">
                 
                 <ul>
-                    <li id="menuIcon"><i class="fas fa-bars fa-2x"></i>
-                        <ul id="menuList">
-                            <li class="menuItem"><a href="index.html">Home</a></li>
-                            <li class="menuItem"><a href="about.html">About</a></li>
-                            <li class="menuItem"><a href="work.html">Work</a></li>
-                            <li class="menuItem"><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="desktopMenuIcon"><a href="index.html">Home</a></li>
+                    <li class="desktopMenuIcon"><a href="about.html">About</a></li>
+                    <li class="desktopMenuIcon"><a href="work.html">Work</a></li>
+                    <li class="desktopMenuIcon"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +31,7 @@
             <div id="glassBackground">
                 <p class="glassText">Hello, my name is Blake.</p>
                 <p class="glassText">I am a Web Developer who has experience across a number of different languages and technologies.</p>
-                <p class="glassText" id="glassTextBottom">Check out my porfolio to see some of the projects I have been working on.</p>
+                <p class="glassText" id="glassTextBottom">Check out my porfolio to learn more about me and my skills.</p>
             </div>
 
         </section>
@@ -55,6 +47,5 @@
             </ul>
 
         </footer>
-
     </body>
 </html>
