--- a/public/work.html
+++ b/public/work.html
@@ -14,16 +14,7 @@
 
     <header>
         <nav class="headerBar">
-
             <ul>
-                <li id="menuIcon"><i class="fas fa-bars fa-2x"></i>
-                    <ul id="menuList">
-                        <li class="menuItem"><a href="index.html">Home</a></li>
-                        <li class="menuItem"><a href="about.html">About</a></li>
-                        <li class="menuItem"><a href="work.html">Work</a></li>
-                        <li class="menuItem"><a href="contact.html">Contact</a></li>
-                    </ul>
-                </li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
@@ -32,8 +23,9 @@
         </nav>
     </header>
 
-    <section>
-            <h3>Projects: </h3>
+    <h2 id="mainTitle">Projects</h2>
+
+    <section id="mainContainer">
 
             <!-- put grid here for projects -->
     </section>
