--- a/public/contact.html
+++ b/public/contact.html
@@ -14,16 +14,7 @@
 
     <header>
         <nav class="headerBar">
-
             <ul>
-                <li id="menuIcon"><i class="fas fa-bars fa-2x"></i>
-                    <ul id="menuList">
-                        <li class="menuItem"><a href="index.html">Home</a></li>
-                        <li class="menuItem"><a href="about.html">About</a></li>
-                        <li class="menuItem"><a href="work.html">Work</a></li>
-                        <li class="menuItem"><a href="contact.html">Contact</a></li>
-                    </ul>
-                </li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
@@ -32,9 +23,21 @@
         </nav>
     </header>
 
-    <section>
-        <h3>Contact me at:</h3>
+    <h2 id="mainTitle">Contact Information</h2>
+
+    <section id="mainContainer">
         <p>Email: blakelatch01@gmail.com</p>
+        <p>LinkedIn: https://www.linkedin.com/in/blake-latch/</p>
+        <form action="">
+            <label for="email">Email:</label>
+            <input type="text" id="email">
+
+            <br>
+            
+            <label for="message">Message: </label>
+            <input type="text" id="message">
+        
+        </form>
     </section>
 
     <footer id="containerFooter">
